# on-call-data-engineering-ai-agent

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
deployment/: README.md  deploy.sh  iam_policy.json  slack_manifest.yaml  template.yaml
docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  SETUP.md  TROUBLESHOOTING.md
monitoring/: dashboard.json
src/: __init__.py  app.py  lambda_handler.py  orchestrator.py  parser.py  prompt_engine.py  runtime_prompt.py  tools.py
terraform/: README.md  api_gateway.tf  backend.tf  cloudwatch.tf  iam.tf  lambda.tf  main.tf  outputs.tf  sns.tf  sqs.tf  terraform.tfvars.example  variables.tf
tests/: sample_diagnostic_event.json  sample_slack_event.json  test_lambda_handler.py  test_orchestrator.py  test_tools.py  verification_challenge.json
